# RobotCleaner

./: .gitignore  CMakeLists.txt  main.cpp  server
.github/workflows/: cpp-build.yml  sonar-project.properties
tests/: my_test.cpp
